Tue Dec  8 15:10:17 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_transient_parent_realized):
	Fixed order of arguments to gdk_window_transient_for().

Tue Dec  8 18:02:57 GMT 1998  Tony Gale  <gale@gtk.org>

	* examples/Makefile: simple top level Makefile that invokes all
	  the sub-directory Makefiles.

1998-12-08  Andrew T. Veliath  <andrewtv@usa.net>

	* gtk/testgtk.c: Functions to test the toolbar space style.

	* gtk/gtktoolbar.c: Add a private GtkToolbarChildSpace subclass of
	GtkToolbarChild to hold allocation. Set default space style to
	GTK_TOOLBAR_SPACE_EMPTY, define SPACE_LINE_* for separator
	fraction defaults.
	(gtk_toolbar_paint_space_line): New function; paints the separator
	line, using "toolbar" as the detail.
	(gtk_toolbar_expose): (gtk_toolbar_draw): Handle CHILD_SPACE when
	style is set to SPACE_LINE.
	(gtk_toolbar_size_allocate): Store space allocations.
	(gtk_toolbar_insert_element): If we are a space, allocate and
	initialize a GtkToolbarChildSpace instead of a GtkToolbarChild.
	(gtk_toolbar_set_space_style): New function.

	* gtk/gtktoolbar.h: Add GtkToolbarSpaceStyle, with styles of EMPTY
	and LINE. Add prototype for gtk_toolbar_set_space_style.

Mon Dec  7 16:03:55 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkthemes.h: Remove random unnecessary includes
	of standard headers.

1998-12-07  Damon Chaplin  <DAChaplin@msn.com>

	* gtk/gtkfontsel.c (gtk_font_selection_select_best_style): made sure
	we only try to match styles which are currently shown.

	(gtk_font_selection_init): set the notebook tabs homogeneous and set
	the border, so we don't need to set the size explicitly (bad for i18n).
	Used the clist auto-resize feature for the font and style lists on the
	main page and all the filters. Used padding for the 'Reset Filter'
	button instead of spaces around it (bad for i18n).

	(gtk_font_selection_find_font): when searching for
	a font, if we can't match both the family and foundry, we return any