@@ -180,8 +180,8 @@ void   gtk_signal_set_funcs		  (GtkSignalMarshal	marshal_func,
 					   GtkSignalDestroy	destroy_func);
 
 /* Report internal information about a signal. The caller has the
- *  responsibility to invoke a supsequent g_free (returned_data); but
- *  must not modify data pointed to by the members of GtkSignalQuery 
+ * responsibility to invoke a subsequent g_free (returned_data); but
+ * must not modify data pointed to by the members of GtkSignalQuery 
  */
 GtkSignalQuery* gtk_signal_query	  (guint		signal_id);
 
